<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgk3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505"
    tools:context=".komponensiaran">

    <TextView
        android:id="@+id/JudulSiaran"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/txtbtn3"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/isikom3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/isikom3"
        android:layout_width="389dp"
        android:layout_height="486dp"
        android:layout_marginTop="16dp"
        android:gravity="fill"
        android:text="@string/isikom3"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JudulSiaran" />

    <Button
        android:id="@+id/btnsiaran1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="120dp"
        android:background="@color/colorAccent"
        android:text="@string/link"
        android:onClick="open7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnsiaran2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginBottom="120dp"
        android:background="@color/colorAccent"
        android:text="@string/syn"
        android:onClick="open8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnsiaran1" />
</androidx.constraintlayout.widget.ConstraintLayout>