<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgk4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505"
    tools:context=".komponenmateri">

    <TextView
        android:id="@+id/JudulMateri"
        android:layout_width="279dp"
        android:layout_height="56dp"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/txtbtn4"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/isikom4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/isikom4"
        android:layout_width="402dp"
        android:layout_height="367dp"
        android:layout_marginTop="19dp"
        android:gravity="fill"
        android:text="@string/isikom4"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JudulMateri" />

    <Button
        android:id="@+id/btnmateri1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="167dp"
        android:layout_marginRight="167dp"
        android:background="@color/colorAccent"
        android:text="@string/link"
        android:onClick="open5"
        app:layout_constraintEnd_toStartOf="@+id/btnmateri2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isikom4" />

    <Button
        android:id="@+id/btnmateri2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="209dp"
        android:background="@color/colorAccent"
        android:text="@string/syn"
        android:onClick="open6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>