<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/deskripsi"
        style="@android:style/Widget.Holo.Light.TextView"
        android:layout_width="311dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center|fill_horizontal|fill_vertical"
        android:text="@string/deskripsi"
        android:textColor="@color/colorAccent"
        android:textColorHighlight="@color/colorPrimary"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/komponen1"
        android:layout_width="114dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/button1"
        android:foreground="@drawable/ic_launcher_foreground"
        android:foregroundGravity="center"
        android:tint="#E91E63"
        android:onClick="ClickKomponen1"
        app:layout_constraintBottom_toTopOf="@+id/komponen3"
        app:layout_constraintEnd_toStartOf="@+id/komponen2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deskripsi"
        app:srcCompat="@color/colorAccent"
        tools:targetApi="m" />

    <ImageButton
        android:id="@+id/komponen2"
        android:layout_width="114dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/button2"
        android:foreground="@drawable/ic_launcher_foreground"
        android:onClick="ClickKomponen2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/komponen1"
        app:layout_constraintTop_toBottomOf="@+id/deskripsi"
        app:srcCompat="@color/colorAccent"
        tools:targetApi="m" />

    <ImageButton
        android:id="@+id/komponen3"
        android:layout_width="114dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/button3"
        android:foreground="@drawable/ic_launcher_foreground"
        android:onClick="ClickKomponen3"
        app:layout_constraintEnd_toStartOf="@+id/komponen4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen1"
        app:srcCompat="@color/colorAccent"
        tools:targetApi="m" />

    <ImageButton
        android:id="@+id/komponen4"
        android:layout_width="114dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/button4"
        android:foreground="@drawable/ic_launcher_foreground"
        android:onClick="ClickKomponen4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/komponen3"
        app:layout_constraintTop_toBottomOf="@+id/komponen2"
        app:srcCompat="@color/colorAccent"
        tools:targetApi="m" />

    <ImageButton
        android:id="@+id/komponen5"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="114dp"
        android:layout_height="100dp"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="141dp"
        android:layout_marginRight="141dp"
        android:contentDescription="@string/button5"
        android:foreground="@drawable/ic_launcher_foreground"
        android:tint="#003F1414"
        android:onClick="ClickKomponen5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen4"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/textbtn1"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="2dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal|top"
        android:inputType="textPersonName"
        android:text="@string/txtbtn1"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/komponen3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/txtbtn2"
        android:layout_width="114dp"
        android:layout_height="35dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal|top"
        android:inputType="textPersonName"
        android:text="@string/txtbtn2"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/komponen3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textbtn1"
        app:layout_constraintTop_toBottomOf="@+id/komponen1"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textbtn4"
        android:layout_width="114dp"
        android:layout_height="35dp"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal|top"
        android:inputType="textPersonName"
        android:text="@string/txtbtn4"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/komponen5"
        app:layout_constraintStart_toEndOf="@+id/textbtn3"
        app:layout_constraintTop_toBottomOf="@+id/komponen4"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textbtn5"
        android:layout_width="114dp"
        android:layout_height="35dp"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal|top"
        android:inputType="textPersonName"
        android:text="@string/txtbtn5"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen5"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textbtn3"
        android:layout_width="114dp"
        android:layout_height="35dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal|top"
        android:inputType="textPersonName"
        android:text="@string/txtbtn3"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/komponen5"
        app:layout_constraintEnd_toStartOf="@+id/textbtn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>